--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       My Server! (click the Banner to join)
     </h2>
       <a href="https://discord.gg/Sxs37ehuyR">
-       <img border="0" alt="https://discord.gg/Sxs37ehuyR" src="discordbanner.png" width="468" height="140">
+       <img border="0" alt="https://discord.gg/Sxs37ehuyR" src="https://niclas.wants-to.party/aKB3sYtD9D.png" width="468" height="140">
       </a>
       <h2>
         My Discord Name
