--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Niclas Website:)</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="_config.yml">
   </head>
   <body>
     <div style="background-color:magenta;color:black;padding:20px;">
