--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h2>
       My Server! (Click the banner to join)
     </h2>
-      <a href="https://discord.gg/Sxs37ehuyR">
+      <a target="_blank" href="https://discord.gg/Sxs37ehuyR">
        <img border="0" alt="https://discord.gg/Sxs37ehuyR" src="https://niclas.wants-to.party/aKB3sYtD9D.png" width="468" height="140">
       </a>
       <h2>
@@ -27,7 +27,7 @@
       </p>
       <h2>
         Motion Development
-        <a href="https://www.motiondevelopment.top/bot" target="_blank">Click here</a>
+        <a target="_blank" href="https://www.motiondevelopment.top/bot" target="_blank">Click here</a>
       </h2>
 
 
