--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
       </p>
       <h2>
         Motion Development
-        <a href="https://www.motiondevelopment.top/bot" target="_blank">Click here</a>
       </h2>
+      <p>
+        <a href="https://www.motiondevelopment.top/bot" target="_blank">Botlist</a>
+        <a href="https://hosting.motiondevelopment.top/" target"_blank">Cheap Hosting</a>
+      <p>
 
 
 
