--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       <p>
         <a href="https://www.motiondevelopment.top/bot" target="_blank">Botlist</a>
         <a href="https://hosting.motiondevelopment.top/" target"_blank">Cheap Hosting</a>
+        <a href="https://wants-to.party/" target"_blank">File Hosting</a>
       <p>
 
 
