--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             <ul>
                 <li><a href="#" class="active">Home</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Discord</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="https://discord.gg/Sxs37ehuyR">Discord</a></li>
+                <li><a href="https://hosting.motiondevelopment.top">Discord Bot Host</a></li>
             </ul>
         </header>
         <section>
@@ -76,7 +76,7 @@
                 mountains_front.style.top = value * 0 + 'px';
                 text.style.marginRight = value * 4 + 'px';
                 text.style.marginTop = value * 1.5 + 'px';
-                btn.style.marginTop = value * 4 + 'px';
+                btn.style.marginRight = value * 4 + 'px';
                 header.style.top = value * 0.5 + 'px';
             })
         </script>
