--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>NcZ</title>
         <link rel="stylesheet" href="style.css">
+        <link rel="icon" href="icon.png">
     </head>
     <body>
         <header>
@@ -25,38 +26,21 @@
         <div class="sec" id="sec">
             <h2>Welcome to the NcZ Website</h2>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta suscipit dolor possimus! Quae,
-                 optio! Reiciendis tempora quos accusantium voluptatum ea illo quibusdam cumque?
-                 Harum sapiente veritatis ea ab facere dolores.
-                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolorum cumque, laudantium qui,
-                  officiis reiciendis quidem dignissimos obcaecati alias cum, natus eum aliquid deleniti!
-                   Rerum eius nostrum deserunt nobis pariatur.<br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta suscipit dolor possimus! Quae,
-                   optio! Reiciendis tempora quos accusantium voluptatum ea illo quibusdam cumque?
-                   Harum sapiente veritatis ea ab facere dolores.
-                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolorum cumque, laudantium qui,
-                    officiis reiciendis quidem dignissimos obcaecati alias cum, natus eum aliquid deleniti!
-            <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta suscipit dolor possimus! Quae,
-            optio! Reiciendis tempora quos accusantium voluptatum ea illo quibusdam cumque?
-            Harum sapiente veritatis ea ab facere dolores.
-            <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta suscipit dolor possimus! Quae,
-            optio! Reiciendis tempora quos accusantium voluptatum ea illo quibusdam cumque?
-            Harum sapiente veritatis ea ab facere dolores.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolorum cumque, laudantium qui,
-             officiis reiciendis quidem dignissimos obcaecati alias cum, natus eum aliquid deleniti!
-             <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta suscipit dolor possimus! Quae,
-                   optio! Reiciendis tempora quos accusantium voluptatum ea illo quibusdam cumque?
-                   Harum sapiente veritatis ea ab facere dolores.
-                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolorum cumque, laudantium qui,
-                    officiis reiciendis quidem dignissimos obcaecati alias cum, natus eum aliquid deleniti!
-            <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta suscipit dolor possimus! Quae,
-            optio! Reiciendis tempora quos accusantium voluptatum ea illo quibusdam cumque?
-            Harum sapiente veritatis ea ab facere dolores.
-            <br><br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta suscipit dolor possimus! Quae,
-            optio! Reiciendis tempora quos accusantium voluptatum ea illo quibusdam cumque?
-            Harum sapiente veritatis ea ab facere dolores.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dolorum cumque, laudantium qui,
-             officiis reiciendis quidem dignissimos obcaecati alias cum, natus eum aliquid deleniti!
+                Welcome to the NcZ Website
+                <br><br>My Name is Niclas and im a Python Discord Bot Coder.
+                <br><br>Feel free to join my Discord Server, you can find the Link to it on the Top of this Website, or just click
+                <a href="https://discord.gg/Sxs37ehuyR" target="_blank">here</a>
+                <br><br>
             </p>
+            <h2>
+                What you can find on my Discord
+            </h2>
+            <p>
+                <br><br>- Pokémon Generation 7 (Sun, Moon, Ultra Sun, Ultra Moon) GTS Bot @DeoxSYS
+                <br><br>- Many different Channels to chat with people
+                <br><br>- Nintendo Console Modding Channels
+            </p>
+
         </div>
 
         <script>
