--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
     <head>
+        <meta property="og:site_name" content="NcZ">
+        <meta property="og:description" content="Welcome to NcZ!">
         <title>NcZ</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="icon.png">
