--- a/BotMaker.html
+++ b/BotMaker.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <title>Discord Bot Maker</title>
+        <meta property="og:site_name" content="NcZ">
+        <meta property="og:description" content="NcZ Official Discord Bot Maker 2022">
         <link rel="stylesheet" href="style2.css">
         <link rel="icon" href="icon.png">
     </head>
