--- a/BotMaker.html
+++ b/BotMaker.html
@@ -13,7 +13,9 @@
                 <li><a id="homebtn" href="https://ncz.mtdv.me" class="active">Home</a></li>
             </ul>
         </header>
-
+        <div class="bg"></div>
+        <div class="bg bg2"></div>
+        <div class="bg bg3"></div>
         <div class="container">
             <div id="rick" style="text-align: center; display: none;">
                 <h1 style="font-size: 5rem;"> </h1>
