--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div id="stillonwork" style="text-align: center;">
                 <h1>Site in progress..</h1>
-                <h4>This Site is still not finished and we are currently working on it, feel free to check out the <a onclick="cont()" href="https://ncz.mtdv.me/BotMaker">BotMaker Page</a> tho</h4>
+                <h4>This Site is still not finished and we are currently working on it, feel free to check out the <a href="https://ncz.mtdv.me/BotMaker">BotMaker Page</a> tho</h4>
                 <li><a href="https://discord.gg/Sxs37ehuyR">Discord</a></li>
                 <li><a href="https://ncz.mtdv.me/BotMaker">Bot Maker</a></li>
             </div>
