--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <a href="#" class="logo">NcZ</a>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="https://mtdv.me/b/hmm">Hmm</a></li>
                 <li><a href="https://discord.gg/Sxs37ehuyR">Discord</a></li>
             </ul>
         </header>
@@ -24,6 +24,7 @@
                 <h4>This Site is still not finished and we are currently working on it, feel free to check out the <a href="https://ncz.mtdv.me/BotMaker">BotMaker Page</a> tho</h4>
                 <li><a href="https://discord.gg/Sxs37ehuyR">Discord</a></li>
                 <li><a href="https://ncz.mtdv.me/BotMaker">Bot Maker</a></li>
+                <li><a href="https://mtdv.me/b/hmm">Hmm Discord Bot</a></li>
             </div>
         </div>
     </body>
