--- a/BotMaker.html
+++ b/BotMaker.html
@@ -1,16 +1,16 @@
 <html>
     <head>
         <title>Discord Bot Maker</title>
-        <meta property="og:site_name" content="NcZ">
-        <meta property="og:description" content="NcZ Official Discord Bot Maker 2022">
+        <meta property="og:site_name" content="Astral">
+        <meta property="og:description" content="Astral Official Discord Bot Maker 2022">
         <link rel="stylesheet" href="style2.css">
         <link rel="icon" href="icon.png">
     </head>
     <body>
         <header>
-            <a href="#" class="logo">NCZ Discord Bot Maker</a>
+            <a href="#" class="logo">Astral Discord Bot Maker</a>
             <ul>
-                <li><a id="homebtn" href="https://ncz.mtdv.me" class="active">Home</a></li>
+                <li><a id="homebtn" href="https://astraö.mtdv.me" class="active">Home</a></li>
             </ul>
         </header>
         <div class="bg"></div>
@@ -36,7 +36,6 @@
                 document.getElementById("cookies").style.display="none"
                 document.getElementById("rick").style.display=""
                 document.getElementById("homebtn").remove()
-                document.getElementById("stars").remove()
             }
 
             var noRightClick = document.getElementById("rickvid");
