--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <html>
     <head>
-        <title>NcZ</title>
-        <meta property="og:site_name" content="NcZ">
-        <meta property="og:description" content="NcZ Web">
+        <title>Astral</title>
+        <meta property="og:site_name" content="Astral">
+        <meta property="og:description" content="Astral">
         <link rel="stylesheet" href="style.css">
         <link rel="icon" href="icon.png">
     </head>
     <body>
         <header>
-            <a href="#" class="logo">NcZ</a>
+            <a href="#" class="logo">Astral</a>
             <ul>
                 <li><a href="#" class="active">Home</a></li>
-                <li><a href="https://ncz.mtdv.me/hmm">Hmm</a></li>
                 <li><a href="https://discord.gg/Sxs37ehuyR">Discord</a></li>
+                <li><a href="https://motiondevelopment.top">Motion Botlist</a></li>
             </ul>
         </header>
         <div class="bg"></div>
@@ -23,9 +23,10 @@
                 <h1>Site in progress..</h1>
                 <h4>This Site is still not finished and we are currently working on it, feel free to check out the <a href="https://ncz.mtdv.me/BotMaker">BotMaker Page</a> tho</h4>
                 <li><a href="https://discord.gg/Sxs37ehuyR">Discord</a></li>
-                <li><a href="https://ncz.mtdv.me/BotMaker">Bot Maker</a></li>
-                <li><a href="https://ncz.mtdv.me/hmm">Hmm Discord Bot</a></li>
+                <li><a href="https://astral.mtdv.me/BotMaker">Bot Maker</a></li>
+                <li><a href="https://astral.mtdv.me/hmm">Hmm Discord Bot</a></li>
             </div>
         </div>
     </body>
 </html>
+
